# crowdfunding_practice

./: .env.example  Cargo.toml  README.md  compose.yaml
.sqlx/: query-11063416c2d0a79b5cfa4b76a3ade4a38922aa8336716f56e0ac32c5cffc0435.json  query-274e3a2e5df030dcaaa26cbe435437cfdc0687f6772b395ff4cbf5128ad0647d.json  query-3c0113ff4b4e74c2365b1a5add95777b8fdd4d07079bea3327fc9895f7a81d64.json  query-602ffe4f083f85b3aaea3a58e3484a54369e7e17bef8755688e3b1f751428c56.json  query-665029c04e1e5b8da07f6d0f2fcf6d948b514b64b09227eb66524b207571a486.json  query-79dd291a1b26205e317359ffc04748bb758cb29aa37de69d33aac69c4f988497.json  query-95baa39acb8d7ea0b2a8ea7a36982d9cdcfbe3d6e96d8c8229451db8fce09647.json  query-a4cc544c620727400ab759001c883428ed30fa7cad68f453a554695321242889.json  query-afaf54eb437149a6548aa8796fba6741c728fcfe0e5cb0e644cd9dd36250c09c.json  query-b1eb1389dbd10e0d94e708efe7a76ddb7e9cae07ab6b2576a1d869c76c675815.json  query-b4e53f652295dd33a1e49d326a781a50221612a810098ca1f28ec2023bcbbf3c.json  query-b8e9dfe7e59eb7f031e44792d2f3fee782cdba34589e919215ba9c756109ce92.json  query-c50c07037689460906264f69eabe7b40a90da40807b22a135e2f89f749566508.json  query-ce140465b02d3409777d6a2552f316e4caf00f526324d0b0843ce6934a1801e5.json  query-e6240abafe14c322096517339d77a71b1093a76a397c18a8aa920dc82d195e74.json  query-f017a95020c8b4b1e399e1aabf6d426d51ad51f0dd72d718f57fc0dbb939bb6a.json  query-f418c856a37d86dfc52bcf85f24fae7bc980350df98635a969b1d58681b575fd.json  query-fed797a5f3371b0bdc2ab7fadfedeb3bc6a6f1809e78cfdc9ad40e9d34f6135a.json
http/: admin.http  auth.http  campaign.http  order.http  user.http
migrations/: 20260316161444_create_users_table.sql  20260318060429_add_age_and_gender_to_users.sql  20260318062924_change_gender_to_enum.sql  20260319091358_add_role_and_split_active.sql  20260320070942_create_campaigns.sql  20260320111044_create_orders.sql
src/: app_state.rs  main.rs
src/api_doc/: admin_api_doc.rs  auth_api_doc.rs  campaign_api_doc.rs  mod.rs  order_api_doc.rs  user_api_doc.rs
src/config/: app_config.rs
src/dto/: mod.rs
src/error/: app_error.rs
src/extractor/: admin_user.rs  auth_user.rs  authenticated_user.rs  (+2 more)
(+44 files in other folders)
